<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:id="@+id/group">-->
        <!--<item android:id="@+id/group_item1"-->
            <!--android:onClick="onGroupItemClick"-->
            <!--android:title="Register" />-->
        <!--<item android:id="@+id/group_item2"-->
            <!--android:onClick="onGroupItemClick"-->
            <!--android:title="About" />-->
    <!--</group>-->

    <item android:id="@+id/action_register"
        android:title="@string/register"
        app:showAsAction="never" />
    <item android:id="@+id/action_login"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item android:id="@+id/action_create_band"
        android:title="Create Group / Band"
        app:showAsAction="never"/>
    <item android:id="@+id/action_bands"
        android:title="Your Band(s)"
        app:showAsAction="never"/>
    <item android:id="@+id/action_booking_list"
        android:title="@string/booking_list"
        android:icon="@drawable/ic_book_white_24dp"
        app:showAsAction="always"/>
    <item android:id="@+id/action_account"
        android:title="@string/account"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="never"/>
    <!--<item android:id="@+id/action_create_musician"-->
        <!--android:title="@string/create_musician"-->
        <!--android:icon="@drawable/ic_person_add_white_24dp"-->
        <!--app:showAsAction="ifRoom"/>-->
</menu>