<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_home"
    tools:context="com.gighub.app.ui.activity.IntroActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_v2"
        android:layout_gravity="center|center_vertical"
        android:layout_marginBottom="75dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_marginBottom="25dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiscover"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/discover"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button_border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:text="OR"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_manager"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnJoin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button_border"
        android:text="@string/join"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_marginLeft="5dp"
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="#ffffff" />
</LinearLayout>


</LinearLayout>
