<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/musician2"
    tools:context="com.gighub.app.ui.activity.LoginAsMusicianActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_v2"
        android:layout_gravity="center|center_vertical"
        android:layout_marginBottom="75dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_musician"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"/>
    <android.support.design.widget.TextInputLayout
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:id="@+id/editTextEmailMusicianLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:id="@+id/editTextPasswordMusicianLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="end">
        <Button
            android:id="@+id/btnCancelMusicianLogin"
            android:elevation="4dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_border"
            android:text="@string/cancel"/>
        <Button
            android:textColor="@color/colorAccent"
            android:elevation="4dp"
            android:id="@+id/btnLoginMusicianLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/button_border"
            android:text="@string/login"/>
    </LinearLayout>

</LinearLayout>
