<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_home"
    android:gravity="center"
    tools:context=".ui.activity.RegisterAsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


    <Button
        android:id="@+id/btn_reg_as_org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reg_as_organizer"
        android:textAllCaps="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="12pt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"/>
    <Button
        android:id="@+id/btn_reg_as_msc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reg_as_musician"/>
    </LinearLayout>
</LinearLayout>
