<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_home"
    android:gravity="center"
    tools:context=".ui.activity.RegisterAsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_login_as_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_white"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_as_organizer"
            android:textAllCaps="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"/>
        <Button
            android:id="@+id/btn_login_as_msc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_white"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_as_musician"/>

        <!--<LinearLayout-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:layout_gravity="right"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Don't have an account?"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="#ffffff"/>-->
            <!--<TextView-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:id="@+id/tv_register_loginactivity"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/register"-->
                <!--android:textSize="20sp"-->
                <!--android:textStyle="bold"-->
                <!--android:textAllCaps="true"-->
                <!--android:textAlignment="center"-->
                <!--android:textColor="#ffffff" />-->
        <!--</LinearLayout>-->
    </LinearLayout>
</LinearLayout>
